syntax = "proto3";

package user;

option java_package = "com.example.user";
option java_multiple_files = true;
option java_outer_classname = "UserServiceProto";

// Health Check Messages
message HealthCheckRequest {
  string service = 1;
}

message HealthCheckResponse {
  string service = 1;
  string status = 2;
  int64 timestamp = 3;
  string message = 4;
}

// Validate User Messages
message ValidateUserRequest {
  string user_id = 1;
}

message ValidateUserResponse {
  bool valid = 1;
  string user_id = 2;
  string status = 3;
  bool success = 4;
  string message = 5;
}

// Get User Profile Messages
message GetUserProfileRequest {
  string user_id = 1;
}

message GetUserProfileResponse {
  string user_id = 1;
  string username = 2;
  string email = 3;
  string full_name = 4;
  string phone_number = 5;
  string status = 6;
  int64 created_at = 7;
  int64 updated_at = 8;
  bool success = 9;
  string message = 10;
}

// Update User Profile Messages
message UpdateUserProfileRequest {
  string user_id = 1;
  string username = 2;
  string email = 3;
  string full_name = 4;
  string phone_number = 5;
}

message UpdateUserProfileResponse {
  string user_id = 1;
  int64 timestamp = 2;
  bool success = 3;
  string message = 4;
}

// Service Definition
service UserService {
  rpc HealthCheck(HealthCheckRequest) returns (HealthCheckResponse);
  rpc ValidateUser(ValidateUserRequest) returns (ValidateUserResponse);
  rpc GetUserProfile(GetUserProfileRequest) returns (GetUserProfileResponse);
  rpc UpdateUserProfile(UpdateUserProfileRequest) returns (UpdateUserProfileResponse);
}
