syntax = "proto3";

option go_package = "./proto";

package driver;

// Driver Service Definition
service DriverService {
  // Find nearby drivers within a radius
  rpc FindNearbyDrivers (FindNearbyDriversRequest) returns (FindNearbyDriversResponse);
  
  // Get driver status and location
  rpc GetDriverStatus (GetDriverStatusRequest) returns (GetDriverStatusResponse);
  
  // Update driver location
  rpc UpdateDriverLocation (UpdateDriverLocationRequest) returns (UpdateDriverLocationResponse);
  
  // Update driver status (AVAILABLE, BUSY, OFFLINE)
  rpc UpdateDriverStatus (UpdateDriverStatusRequest) returns (UpdateDriverStatusResponse);
  
  // Health check for the service
  rpc HealthCheck (HealthCheckRequest) returns (HealthCheckResponse);
}

// Request to find nearby drivers
message FindNearbyDriversRequest {
  double latitude = 1;
  double longitude = 2;
  double radius_km = 3;
  int32 limit = 4;
}

// Response with list of nearby drivers
message FindNearbyDriversResponse {
  repeated DriverInfo drivers = 1;
  int32 count = 2;
  double search_radius = 3;
  Location search_location = 4;
  bool success = 5;
  string message = 6;
}

// Driver information
message DriverInfo {
  string driver_id = 1;
  string user_id = 2;
  double latitude = 3;
  double longitude = 4;
  double distance = 5;
  string status = 6;
  string vehicle_plate = 7;
  string vehicle_model = 8;
  double rating = 9;
  int64 timestamp = 10;
  string geohash = 11;
}

// Location information
message Location {
  double latitude = 1;
  double longitude = 2;
}

// Request to get driver status
message GetDriverStatusRequest {
  string driver_id = 1;
}

// Response with driver status
message GetDriverStatusResponse {
  string driver_id = 1;
  string user_id = 2;
  string status = 3;
  double latitude = 4;
  double longitude = 5;
  string license_number = 6;
  string vehicle_model = 7;
  string vehicle_plate = 8;
  double rating = 9;
  int32 total_trips = 10;
  bool success = 11;
  string message = 12;
}

// Request to update driver location
message UpdateDriverLocationRequest {
  string driver_id = 1;
  double latitude = 2;
  double longitude = 3;
}

// Response after updating driver location
message UpdateDriverLocationResponse {
  string driver_id = 1;
  double latitude = 2;
  double longitude = 3;
  int64 timestamp = 4;
  string geohash = 5;
  bool success = 6;
  string message = 7;
}

// Request to update driver status
message UpdateDriverStatusRequest {
  string driver_id = 1;
  string status = 2; // AVAILABLE, BUSY, OFFLINE
}

// Response after updating driver status
message UpdateDriverStatusResponse {
  string driver_id = 1;
  string status = 2;
  int64 timestamp = 3;
  bool success = 4;
  string message = 5;
}

// Health check request
message HealthCheckRequest {
}

// Health check response
message HealthCheckResponse {
  string service = 1;
  string status = 2;
  int64 timestamp = 3;
  string message = 4;
}